feat: speak text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             <div id="cards-stats" class="cards-stats">
                 <span id="review-count">0</span> / <span id="total-count">0</span>
             </div>
-            <button id="start-review" class="btn">Review</button>
+            <div class="review-controls">
+                <button id="start-review" class="btn">Review</button>
+                <label class="speech-toggle">
+                    <input type="checkbox" id="speech-enabled" checked>
+                    <span>Auto Speech</span>
+                </label>
+            </div>
             <div id="cards-container"></div>
         </div>
         
