--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemCard</title>
+    <link href="favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
