feat: add review summary

--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
         <div id="card-preview" class="section hidden"></div>
     </div>
     
+    <!-- Review session summary overlay -->
+    <div id="session-summary" class="session-summary hidden">
+      <div class="session-summary-card">
+        <div class="session-summary-stars" id="session-stars"></div>
+        <div class="session-summary-metrics">
+          <div><span>Total time:</span> <strong id="session-total-time">0s</strong></div>
+          <div><span>Unknown count:</span> <strong id="session-unknown-count">0</strong></div>
+          <div><span>Avg per action:</span> <strong id="session-avg-time">0s</strong></div>
+        </div>
+        <div class="session-summary-rewards" id="session-rewards"></div>
+      </div>
+    </div>
+    
     <script src="script.js?v=1.0.1"></script>
 </body>
 </html>
