feat: better preview and reward strategy

--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
             </div>
         </div>
         <div id="gem-slots" class="gem-slots"></div>
-        <div id="card-preview" class="section hidden"></div>
     </div>
-    
+    <div id="card-preview" class="hidden"></div>
     <!-- Review session summary overlay -->
     <div id="session-summary" class="session-summary hidden">
       <div class="session-summary-card">
