feat: import&export, better score mechanism

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
                 </div>
 
                 <div class="setting-group">
+                    <h4>Local Storage</h4>
+                    <div class="local-storage-controls">
+                        <button id="export-cards" class="btn">Export Cards</button>
+                        <button id="import-cards" class="btn">Import Cards</button>
+                        <button id="save-cards-file" class="btn">Save to File</button>
+                    </div>
+                    <div id="local-storage-status"></div>
+                </div>
+
+                <div class="setting-group">
                     <h4>Sync</h4>
                     <div class="sync-controls">
                         <button id="upload-cards" class="btn">Upload</button>
