feat: review word list

--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
                 <div class="swipe-left">left/h - forget</div>
                 <div class="swipe-right">right/l - remember</div>
             </div>
+            <div id="word-list-panel" class="word-list-panel hidden">
+                <div class="word-list-header">
+                    <h3>Word List</h3>
+                    <span class="word-list-count"></span>
+                </div>
+                <div class="word-list-content">
+                    <div class="word-list-reviewed"></div>
+                    <div class="word-list-current"></div>
+                    <div class="word-list-upcoming"></div>
+                </div>
+            </div>
         </div>
         <div id="gem-slots" class="gem-slots"></div>
     </div>
