feat: sort rules unknown ratio

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
                         <input type="number" id="time-adjust-input" placeholder="minutes" min="-1440" max="1440" step="1">
                         <button id="adjust-time-btn" class="btn btn-secondary">adjust</button>
                     </div>
+                    <div class="sort-controls">
+                        <select id="sort-select" class="sort-select">
+                            <option value="nextReview">Next Review</option>
+                            <option value="unknownRatio">Unknown Ratio</option>
+                        </select>
+                    </div>
                     <button id="add-card-btn" class="btn btn-add">+</button>
                 </div>
             </div>
